--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-  
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -27,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "reflect-metadata": "^0.1.13",
